add files to create conatiner

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 nagios/nagiosvar
 nagios/nagiosgraphvar
 nagios/nagiosgraphetc
+nagios/nagiosvar/nagios.debug
+nagios/nagiosvar/perfdata.log
+nagios/nagiosvar/status.dat
