--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     env_file: .env
     image: jasonrivers/nagios:latest
     container_name: ${APP_CONTAINER_NAME}
+    environment:
+      - TZ=America/Fortaleza
     volumes:
       - ./nagios/nagiosetc:/opt/nagios/etc
       - ./nagios/nagiosvar:/opt/nagios/var
