save nagios log

--- a/nagios/nagiosetc/servers/server-179.cfg
+++ b/nagios/nagiosetc/servers/server-179.cfg
@@ -31,7 +31,36 @@ define service{
             service_description     Root / Partition            
             check_command           check_nrpe!check_root                          
                                     
-}                                   
+}
+
+define service{
+	use			local-service
+	host_name		server-179
+	service_description	SDA1 / Partition
+	check_command		check_nrpe!check_sda1
+}
+
+define service{
+        use                     local-service
+        host_name               server-179
+        service_description     SDA2 / Partition
+        check_command           check_nrpe!check_sda2
+}
+
+define service{
+        use                     local-service
+        host_name               server-179
+        service_description     SDA5 / Partition
+        check_command           check_nrpe!check_sda5
+}
+
+define service{
+        use                     local-service
+        host_name               server-179
+        service_description     LVM / Partition
+        check_command           check_nrpe!check_lvmsda5
+}
+                                  
                                     
 define service{                     
                                     
